# Assist-Everything-BetterAndBetter-skill

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  TEST_SAMPLES.md  eval-case-workbench-simple.html  eval-chat-session-workbench-demo.html  memory.md  pyproject.toml  self-improving-visual-demo.html  soul.md  user-memory-profile.html
.apriday_memory/: events.jsonl  memory.json
assist_everything_betterandbetter_skill/: __init__.py  cases.py  cli.py  direct_agent.py  evaluator.py  mem0_backend.py  memory.py  runtime_config.py  skill.py
docs/: Eval工作台_需求与研发说明.docx  V5_Workbench_Roadmap.md  V5_Workbench改造与Skill使用路线说明.md  main分支验收指南-Workbench与DirectSkill.docx  参赛验证测试样例.md  噱头Case_别再当猪头_恋爱礼物助手.docx  记忆结构与生命周期说明.md
eval/: README.md
evalharness/: __init__.py  ab.py  agent.py  cli.py  env.py  evaluation.py  intent.py  judge.py  llm.py  mem0_performance.py  quality.py  runner.py  schemas.py  server.py  soul.py  tools.py
reports/: eval-workbench.html
scripts/: apriday_self_improving.py  build_architecture_doc.py  build_eval_workbench.py  build_viral_case_doc.py  build_workbench_requirements_doc.py  check_mimo_baseurl.py  check_minimax_baseurl.py  run_stability_eval.py  verify_eval.py
skill/: SKILL.md
tests/: test_agent_rewrite_guard.py  test_apriday_self_improving.py  test_judge_retry.py  test_mem0_backend.py  test_mem0_performance_demo.py  test_memory_adapters.py  test_memory_advantages.py  test_memory_retrieval_ranking.py  test_project_dependency_contract.py  test_quality_effort.py  test_runtime_config.py  test_skill_markdown_contract.py  (+2 more)
(+39 files in other folders)
