[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "assist-everything-betterandbetter-skill"
version = "0.1.0"
description = "Adaptive memory collaboration skill and eval workbench."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8,<10",
]

[tool.setuptools.packages.find]
include = [
    "assist_everything_betterandbetter_skill*",
    "evalharness*",
]
